# Debate_Club_AI

./: README.md
main/: README.md  pyproject.toml
main/output/: decide.md  oppose.md  propose.md
main/src/debate_club/: crew.py  main.py
main/src/debate_club/config/: agents.yaml  tasks.yaml
