[project]
name = "debate_club"
version = "0.1.0"
description = "Debate_Club using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.0"
]

[project.scripts]
debate_club = "debate_club.main:run"
run_crew = "debate_club.main:run"
train = "debate_club.main:train"
replay = "debate_club.main:replay"
test = "debate_club.main:test"
run_with_trigger = "debate_club.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
